importação do arquivo js

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             Desenvolvido por <strong> Eleazar da silva Nascimento. </strong>
         </footer>
 
-        <script src="../Model/pacienteModel.js"></script>
-        <script src="../Controller/pacienteController.js"></script>
+        <script src="pacienteModel.js"></script>
+        <script src="pacienteController.js"></script>
     </body>
 
 </html>
